--- a/app/views/pet_histories/index.html.erb
+++ b/app/views/pet_histories/index.html.erb
@@ -5,9 +5,10 @@
 <table>
   <thead>
     <tr>
-      <th>Weight</th>
-      <th>Height</th>
-      <th>Description</th>
+       <th>Nombre</th>
+      <th>Peso</th>
+      <th>Altura</th>
+      <th>Descripcion</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,6 +16,7 @@
   <tbody>
     <% @pet_histories.each do |pet_history| %>
       <tr>
+        <td><%= pet_history.pet.name %></td>
         <td><%= pet_history.weight %></td>
         <td><%= pet_history.height %></td>
         <td><%= pet_history.description %></td>
