--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Pet</h1>
 
-<%= render 'form', pet: @pet %>
+<%= render partial: 'form', locals: {pet: @pet, pet_hisotries: @pet_histories} %>
 
 <%= link_to 'Back', pets_path %>
