--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,9 @@
         <li class="nav-item">
           <%= link_to 'Historial', pet_histories_path, class:"nav-link"%>
         </li>
+        <li class="nav-item">
+          <%= link_to 'cliente', clients_path, class:"nav-link"%>
+        </li>
       </ul>
     </div>
   </div>
